--- a/.github/workflows/user_input.yml
+++ b/.github/workflows/user_input.yml
@@ -16,5 +16,6 @@ jobs:
 
     steps:
       - name: "adding two numbers"
-        id: sum
-        run: echo "the sum of ${{inputs.number1}} and ${{inputs.number2}} is ${{${{inputs.number1}} + ${{inputs.number2}} }}"
+        run: |
+          sum=$(( ${{ inputs.number1 }} + ${{ inputs.number2 }} ))
+          echo "the sum of ${{inputs.number1}} and ${{inputs.number2}} is $sum "
